# cast-notebooklm

./: .env.example  .gitignore  CREDITS.md  LICENSE  README.md  SETUP-ALEXANDER.md  pyproject.toml
rest_api/: __init__.py  client_pool.py  deps.py  main.py  webhooks.py
rest_api/routers/: __init__.py  chat.py  notebooks.py  sources.py  studio.py
rest_api/static/: app.js  index.html  style.css
src/notebooklm_tools/core/: auth.py  crypto.py
src/notebooklm_tools/mcp/: profiles.py  server.py
src/notebooklm_tools/services/: chat.py  provenance.py
telegram_bot/: __init__.py  api.py  bot.py  handlers.py  state.py
tests/: test_profiles.py
tests/core/: test_auth_guard.py  test_socks_proxy.py
tests/rest_api/: test_content_pack.py  test_deps.py  test_routes.py  test_webhooks.py
tests/services/: test_chat.py  test_cross_notebook.py  test_provenance.py
tests/telegram_bot/: test_api.py  test_bot.py  test_handlers.py
