[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cast-notebooklm"
version = "0.1.0"
description = "Unified CLI, MCP server, and REST API for Google NotebookLM (with encrypted credential storage, multi-account support, AI-generated content provenance markers, and MCP tool profiles)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alexander Cast" }
]
keywords = ["notebooklm", "mcp", "cli", "rest-api", "google", "ai", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies (CLI + MCP), inherited from the jacob-bd/notebooklm-mcp-cli base
dependencies = [
    "httpx[socks]>=0.27.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "typer>=0.9.0,<1.0",
    "rich>=13.0.0,<15.0",
    "websocket-client>=1.6.0,<2.0",  # CDP login
    "platformdirs>=4.0.0,<5.0",
    "fastmcp>=2.0.0,<4.0",
    "pyyaml>=6.0,<7.0",
    "typing_extensions>=4.4.0; python_version < '3.12'",
    # Added for cast-notebooklm
    "cryptography>=42.0.0,<46.0",     # AES-256-GCM credential encryption at rest
    "fastapi>=0.110.0,<1.0",          # REST API layer
    "uvicorn[standard]>=0.29.0,<1.0", # ASGI server for the REST API
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
# CLI entry point
nlm = "notebooklm_tools.cli.main:cli_main"

# MCP server entry point
notebooklm-mcp = "notebooklm_tools.mcp.server:main"

# REST API entry point
cast-notebooklm-api = "rest_api.main:run"

# Telegram bot entry point
cast-notebooklm-telegram = "telegram_bot.bot:run"

[project.urls]
Homepage = "https://github.com/cast-ai-tech/cast-notebooklm"
Repository = "https://github.com/cast-ai-tech/cast-notebooklm"

[tool.hatch.build.targets.wheel]
packages = ["src/notebooklm_tools", "rest_api", "telegram_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: End-to-end tests requiring live authentication",
    "integration: Integration tests for CLI functionality",
]
